feature/#3 : application.yml jwt 설정 추가 및 redis 설정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,3 +14,15 @@ spring:
     properties:
       hibernate:
         highlight_sql: true
+
+  jwt:
+    refresh:
+      expiration: 604800 # 7일
+    access:
+      expiration: 86400 # 24시간
+    secret: ${JWT_SECRET_KEY}
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
