feature/#3 : application.yml jwt 설정 추가 및 redis 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,10 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+
+  jwt:
+    refresh:
+      expiration: 604800 # 7일
+    access:
+      expiration: 86400 # 24시간
+    secret: ${JWT_SECRET_KEY}
