--- a/build.gradle
+++ b/build.gradle
@@ -45,12 +45,12 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
     // Spring Security
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // JWT
-//    implementation('io.jsonwebtoken:jjwt-api:0.11.5')
-//    runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.5')
-//    runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')
+    implementation('io.jsonwebtoken:jjwt-api:0.11.5')
+    runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.5')
+    runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')
 }
 
 tasks.named('test') {
