--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     implementation('io.jsonwebtoken:jjwt-api:0.11.5')
     runtimeOnly('io.jsonwebtoken:jjwt-impl:0.11.5')
     runtimeOnly('io.jsonwebtoken:jjwt-jackson:0.11.5')
+
+    // cloud Feign Client
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation platform('org.springframework.cloud:spring-cloud-dependencies:2024.0.0')
 }
 
 tasks.named('test') {
