--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
     // Redis
     implementation('org.springframework.boot:spring-boot-starter-data-redis')
+
+    // WebClient
+    implementation('org.springframework.boot:spring-boot-starter-webflux')
 }
 
 tasks.named('test') {
