fix/#3: application.yml에 Swagger api-docs path 지정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -31,3 +31,9 @@ spring:
     kakao:
       client-id: ${KAKAO_REST_API_KEY}
       redirect-uri: ${KAKAO_CALLBACK}
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui
+  api-docs:
+    path: /v3/api-docs
