--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
   jwt:
     refresh:
@@ -26,3 +28,6 @@ springdoc:
     path: /swagger-ui
   api-docs:
     path: /v3/api-docs
+
+
+
