fix: gradle.yml 오타 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,7 +48,7 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: ./docker-compose.yaml
+          source: ./docker-compose.yml
           target: /home/ubuntu/
 
       - name: Transfer nginx directory file to ec2
