fix/#20: kakao map API key application.yml 오타 수정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -32,6 +32,10 @@ spring:
       client-id: ${KAKAO_REST_API_KEY}
       redirect-uri: ${KAKAO_CALLBACK}
 
+  map:
+    kakao:
+      api-key: ${KAKAO_MAP_API_KEY}
+
 springdoc:
   swagger-ui:
     path: /swagger-ui
