--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -26,3 +26,7 @@ spring:
     kakao:
       client-id: ${KAKAO_REST_API_KEY}
       redirect-uri: ${DEV_KAKAO_CALLBACK}
+
+  map:
+    kakao:
+      api-key: ${KAKAO_MAP_API_KEY}
