--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,7 +49,7 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: ./docker-compose.yml
-          target: /home/ubuntu/
+          target: /home/ubuntu/ppiyong-api/
 
       - name: Transfer nginx directory file to ec2
         uses: appleboy/scp-action@master
@@ -73,7 +73,7 @@ jobs:
           port: 22
           script: |
             # 1. cd ~/ppiyong-api
-            mkdir ~/ppiyong-api
+            mkdir -p ~/ppiyong-api
             cd ~/ppiyong-api
             
             # 2. .env 작성
