fix/#20: docker-compose.yml ghcr의 image 사용하도록 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   ppiyong-api:
-    build: .
+    image: ghcr.io/${ORG_NAME}/ppiyong-api:latest
     ports:
       - "8080:8080"
     env_file:
