--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,15 @@
-http {
+upstream backend {
+        server localhost:8080;
+}
 
-    upstream backend {
-        server ppiyong-api:8080;
-    }
+server {
 
-    server {
+    listen 80;
 
-        listen 80;
+    location / {
+        proxy_pass http://backed/;
+        proxy_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
 
-        location / {
-            proxy_pass http://backed/;
-            proxy_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
     }
 }
