fix/#33: .env 파일 변경 사항 반영

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,10 +18,15 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      # Activate .env
+      - name: activate .env
+        run: echo "${{ secrets.ENV }}" > .env
+
       # Build Gradle
       - name: Build With Gradle
         run: |
           chmod +x ./gradlew
+          ./gradlew clean
           ./gradlew build -x test
       # Docker login
       - name: Docker Login to GHCR
